--- a/website/public/index.html
+++ b/website/public/index.html
@@ -14,7 +14,7 @@
     <script src="../js/main.js" ></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="website/src/images/logo.png" type="image/png">
+    <link rel="icon" href="src/images/logo.png" type="image/png">
 
     <title style="background-image: url(../src/images/logo.png);">Home</title>
 </head>
